# SPDX-FileCopyrightText: 2024 perillamint <perillamint@silicon.moe>
#
# SPDX-License-Identifier: CC0-1.0

[package]
name = "portalgun-server"
version = "0.1.0"
edition = "2021"

# REMOVE BEFORE FLIGHT
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
