# SPDX-FileCopyrightText: 2024 perillamint <perillamint@silicon.moe>
#
# SPDX-License-Identifier: CC0-1.0

[package]
name = "portalgun-server"
version = "0.1.0"
edition = "2021"

# REMOVE BEFORE FLIGHT
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "^1.36.0", features = ["full"] }
axum = "^0.7.4"
tonic = "^0.11.0"
hyper = { version = "^1.1.0", features = ["full"] }
hyper-rustls = { version = "^0.26.0" }
anyhow = "^1.0.79"
thiserror = "^1.0.56"
