# SPDX-FileCopyrightText: 2024 perillamint <perillamint@silicon.moe>
#
# SPDX-License-Identifier: CC0-1.0

[package]
name = "portalgun-server"
version = "0.1.0"
edition = "2021"

# REMOVE BEFORE FLIGHT
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "^4.5.0" }
url = "^2.5.0"
serde = { version = "^1.0.196", features = ["derive"] }
tokio = { version = "^1.36.0", features = ["full"] }
tokio-stream = "^0.1.14"
axum = "^0.7.4"
tonic = "^0.11.0"
prost = "^0.12.3"
tower = { version = "^0.4.13", features = ["steer"] }
hyper = { version = "^1.1.0", features = ["full"] }
hyper-rustls = { version = "^0.26.0" }
anyhow = "^1.0.79"
thiserror = "^1.0.56"
tracing = "^0.1.40"
tracing-subscriber = "0.3.18"

[build-dependencies]
tonic-build = "^0.11.0"
