# SPDX-FileCopyrightText: 2024 perillamint <perillamint@silicon.moe>
#
# SPDX-License-Identifier: CC0-1.0

[package]
name = "portalgun"
version = "0.1.0"
edition = "2021"
license = "agpl-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

